examples/test/testpolicy2760.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2760
  namespace: namespace491
spec:
  podSelector:
    matchLabels:
      key2: value26
      key42: value43
      key4: value48
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key31: value24
          key34: value47
          key32: value32
      podSelector:
        matchLabels:
          key21: value11
